@@ -1,3 +1,5 @@
+2006/7/6 -- released version 20060706_trunk
+
 2006/7/5 -- released version 20060705_trunk
 
 2006/7/4 -- released version 20060704_trunk
